<resources>
    <string name="app_name">EduSync</string>

    <!-- Login Fragment -->
    <string name="login">Login</string>
    <string name="email_hint">john.smith@edusync.ma</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="forget_password">Forget Password</string>
    <string name="email_password_required">Email and Password are required</string>
    <string name="email_not_valid">Email is not valid</string>

    <!-- Forget Password - EnterEmailFragment -->
    <string name="generate_otp">Generate OTP</string>
    <string name="cancel">Cancel</string>

    <!-- Forget Password - EnterOtpFragment -->
    <string name="enter_otp">Enter OTP</string>
    <string name="send_again">Send again</string>
    <string name="verify">Verify</string>

    <!-- Forget Password - ChangePasswordFragment -->
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>

    <!-- Home - DashboardFragment -->
    <string name="latest_tests">Latest tests</string>
    <string name="homeworks">Homeworks</string>
    <string name="marks">Marks</string>

    <!-- Home - Menu -->
    <string name="dashboard">Dashboard</string>
    <string name="homework">Homework</string>
    <string name="attendance">Attendance</string>
    <string name="fee_details">Fee Details</string>
    <string name="examination">Examination</string>
    <string name="report_cards">Report Cards</string>
    <string name="calendar">Calendar</string>
    <string name="multimedia">Multimedia</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>

    <!-- Home - HomeworkFragment -->
    <string name="unknown_date">Unknown date</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="months_ago">%d months ago</string>
    <string name="years_ago">%d years ago</string>

    <!-- Home - ProfileFragment -->
    <string name="roll_number">Roll Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="position_in_class">Position in class</string>
    <string name="fathers_name">Father\'s name</string>
    <string name="mothers_name">Mother\'s name</string>
    <string name="ask_for_update">Ask for Update</string>

    <!-- Home - FeeFragment -->
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="total_fee">%1$s DH</string>

    <!-- Home - ExaminationFragment -->
    <string name="duration">Duration: %1$s</string>
    <string name="score">Score: %1$s/100</string>
    <string name="start_test">Start Test</string>
    <string name="completed">Completed</string>

    <!-- Home - ExamFragment -->
    <string name="question_num">Question %1$s:</string>

    <!-- Home - AttendanceFragment -->
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="leave">Leave</string>

    <!-- Home - SingleReportCardFragment -->
    <string name="performance_profile">Performance Profile</string>
    <string name="academic_performance">Academic Performance</string>
    <string name="remarks_by_teacher">Remarks by Teacher</string>
    <string name="total_attendance_of_the_student">Total attendance of the student</string>
    <string name="teachers_remark">Thanks for a fantastic year at school this year! It\'s ben awesome to see everyone grow and develop so much and our community has come together so wonderfully with all of our exciting new projects and activities. Hope you all have a fantastic summer - and looking forward to seeing everyone back in the fall.</string>
</resources>
