<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bottom_bg"
    android:elevation="10dp"
    android:padding="16dp"
    tools:context=".ui.auth.forget_password.enter_otp.EnterOtpFragment">

    <TextView
        android:id="@+id/textView10"
        style="@style/App_MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enter_otp"
        android:textFontWeight="600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.chaos.view.PinView
        android:id="@+id/forget_password_pin_view_otp"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#eee"
        app:itemCount="5"
        app:itemRadius="4dp"
        app:itemWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:lineColor="@color/white"
        app:viewType="rectangle" />

    <Button
        android:id="@+id/textView11"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_again"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textFontWeight="600"
        app:layout_constraintStart_toStartOf="@+id/forget_password_pin_view_otp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_pin_view_otp" />


    <ma.n1akai.edusync.components.common.ButtonWithProgress
        android:id="@+id/forget_password_button_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonText="@string/verify"
        app:layout_constraintBottom_toTopOf="@+id/forget_password_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forget_password_button_cancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>